trunk/Archive2/6e/4780d7fbcea9b3/output
main.cpp: In function 'int main()':
main.cpp:20:29: warning: left operand of comma operator has no effect [-Wunused-value]
  for (int i = 1; i , c.size(); i++) {
                             ^
main.cpp:26:10: error: expected '}' at end of input
  return 0;
          ^
